/**
Copyright 2018 BarD Software s.r.o

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option java_package = "com.bardsoftware.papeeria.backend.cosmas";
option java_outer_classname = "CosmasProto";

message GetVersionRequest {
    string projectId = 1;
    string fileId = 2;
    int32 version = 3;
}

message GetVersionResponse {
    bytes file = 1;
}

message CreateVersionRequest {
    string projectId = 1;
    string fileId = 2;
    bytes file = 3;
}

message CreateVersionResponse {
}

message CreateHistoryOfVersionRequest {
    string user = 1;
    string fileId = 2;
    string patch = 3;
    int64 timeStamp = 4;
}

message CreateHistoryOfVersionResponse {
}

message GetHistoryOfVersionRequest {
    string fileId = 1;
    int32 version = 2;
}

message GetHistoryOfVersionResponse {
    string user = 1;
    string patch = 2;
    int64 timeStamp = 3;
}

service Cosmas {
    rpc GetVersion (GetVersionRequest) returns (GetVersionResponse) {
    }
    rpc CreateVersion (CreateVersionRequest) returns (CreateVersionResponse) {
    }
    rpc CreateHistoryOfVersion (CreateHistoryOfVersionRequest) returns (CreateHistoryOfVersionResponse) {
    }
    rpc GetHistoryOfVersion (GetHistoryOfVersionRequest) returns (GetHistoryOfVersionResponse) {
    }
}
